Complete day01 puzzle

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "test": "mocha \"./{,!(node_modules)/**}/*test.js\"",
     "lint": "eslint .",
     "day0": "node .day00-template/index.js",
-    "day01": "node .day01-historian-hysteria/index.js"
+    "day01": "node day01-historian-hysteria/index.js"
   }
 }
