--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "day01": "node day01-historian-hysteria/index.js",
     "day02": "node day02-red-nosed-reports/index.js",
     "day03": "node day03-mull-it-over/index.js",
-    "day04": "node day04-ceres-search/index.js"
+    "day04": "node day04-ceres-search/index.js",
+    "day05": "node day05-print-queue/index.js"
   }
 }
