--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "day02": "node day02-red-nosed-reports/index.js",
     "day03": "node day03-mull-it-over/index.js",
     "day04": "node day04-ceres-search/index.js",
-    "day05": "node day05-print-queue/index.js"
+    "day05": "node day05-print-queue/index.js",
+    "day06": "node day06-guard-gallivant/index.js"
   }
 }
