Complete day8 puzzles

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "day04": "node day04-ceres-search/index.js",
     "day05": "node day05-print-queue/index.js",
     "day06": "node day06-guard-gallivant/index.js",
-    "day07": "node day07-bridge-repair/index.js"
+    "day07": "node day07-bridge-repair/index.js",
+    "day08": "node day08-resonant-collinearity/index.js"
   }
 }
